# StackMind

./: .gitignore  SETUP_MEMO.md  pyproject.toml  replit.md  run.py
attached_assets/: Pasted-You-are-Replit-AI-Agent-Build-a-production-ready-MVP-ca_1771712250744.txt  Pasted-You-are-working-on-my-existing-StackMind-Streamlit-app-_1771881821935.txt
src/backend/: database.py  main.py  models.py  schemas.py
src/backend/adapters/: gamma.py  heygen.py  runway.py  webhook.py
src/backend/routes/: archive.py  calendar.py  files.py  identities.py  libraries.py  personas.py  sessions.py
src/backend/services/: action_service.py  deck_renderer.py  file_service.py  llm_service.py  module_service.py
src/frontend/: app.py
static/decks/: deck_3ae9d4f8.html  deck_4e3d70eb.html  deck_a77642a7.html
uploads/: 5b57a2d75ffb41118314a549e88a0c11_David note.docx  977f500ae2d34fdd831f1e4eae560537_Michael Dump till 4.docx  sample_strategy.txt
